# CVM-plus-plus

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md  instructions.txt  report.txt  tatusq
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: ast.cpp  ast.h  chunk.h  compiler.cpp  compiler.h  disasm.cpp  disasm.h  error.h  lexer.cpp  lexer.h  main.cpp  opcode.h  parser.cpp  parser.h  token.h  vm.cpp  vm.h
tests/: b1_int32min.cvm  b2_right_shift.cvm  b3_unary_plus.cvm  b6_unary_folding.cvm  break_continue.cvm  calculator.cvm  edge_cases.cvm  fibonacci.cvm  inc_dec.cvm  o2_logical_folding.cvm  o3_rle_test.cvm  phase3_features.cvm  scope.cvm  test_script.cvm  truth_machine.cvm
